--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 
     <h1>SkyFetch Weather Dashboard</h1>
 
+    <!-- 🔍 Search Section -->
+    <div class="search-section">
+        <input 
+            type="text" 
+            id="cityInput" 
+            placeholder="Enter city name..."
+            autocomplete="off"
+        />
+        <button id="searchBtn">Search</button>
+    </div>
+
+    <!-- 🌦 Weather Display -->
     <div id="weather-container">
         <h2 id="city"></h2>
         <p id="temperature"></p>
