--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SkyFetch</title>
+    <title>SkyFetch Weather Dashboard</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>SkyFetch Weather Dashboard</h1>
+    <h1>🌤 SkyFetch Weather Dashboard</h1>
 
     <!-- 🔍 Search Section -->
     <div class="search-section">
@@ -21,10 +25,8 @@
 
     <!-- 🌦 Weather Display -->
     <div id="weather-container">
-        <h2 id="city"></h2>
-        <p id="temperature"></p>
-        <p id="description"></p>
-        <img id="icon" />
+        <!-- Dynamic content will appear here -->
+        <p>🌍 Enter a city name to get started!</p>
     </div>
 
     <!-- Axios Library -->
